bunch of cool stuff
- range negation
- click a character in the grid to remove it. swipe over multiple to remove a range
- change the font in-place. you can press enter when in either of the inputs to recreate the font with the new subset options

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "harfbuzzjs": "^0.4.4",
     "lit": "^3.2.1",
     "pretty-bytes": "^6.1.1",
+    "prosemirror-state": "^1.4.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-error-boundary": "^5.0.0",
