--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "typecheck": "pnpm tsc --noEmit --project tsconfig.app.json"
   },
   "dependencies": {
     "@lit/react": "^1.0.7",
@@ -27,7 +28,8 @@
     "react-error-boundary": "^5.0.0",
     "react-use": "^17.6.0",
     "superjson": "^2.2.2",
-    "woff2-encoder": "^2.0.0"
+    "woff2-encoder": "^2.0.0",
+    "zustand": "^5.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
