--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@lit/react": "^1.0.7",
     "@tailwindcss/vite": "^4.0.9",
     "@tanstack/react-query": "^5.66.11",
+    "@tanstack/react-virtual": "^3.13.2",
     "@tiptap/core": "^2.11.5",
     "@tiptap/extension-typography": "^2.11.5",
     "@tiptap/pm": "^2.11.5",
