--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tiptap/pm": "^2.11.5",
     "@tiptap/react": "^2.11.5",
     "@tiptap/starter-kit": "^2.11.5",
+    "cva": "1.0.0-beta.3",
     "harfbuzzjs": "^0.4.4",
     "lit": "^3.2.1",
     "pretty-bytes": "^6.1.1",
